# application/backend/certiblock/docs/swagger.yaml
@@ -1,19 +1,13 @@
 definitions:
   data.CertificateFileUpload:
     properties:
-      certUUID:
+      encodedFile:
         type: string
-      ksEncryptedFile:
+      issueCertificate:
         type: string
-      studentEncryptedKS1:
+      studentPublicKey:
         type: string
-      studentEncryptedKS2:
-        type: string
-      universityEncryptedKS1:
-        type: string
-      universityEncryptedKS2:
-        type: string
-      universityPrivateKey:
+      universityName:
         type: string
     type: object
   data.CertificateOutput:
@@ -84,6 +78,26 @@ definitions:
   data.StudentOutput:
     properties:
       fullName:
+        type: string
+      privateKey:
+        type: string
+      publicKey:
+        type: string
+    type: object
+  data.UniversityInput:
+    properties:
+      description:
+        type: string
+      location:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+    type: object
+  data.UniversityOutput:
+    properties:
+      name:
         type: string
       privateKey:
         type: string
@@ -328,6 +342,32 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Add a certificate file
+      tags:
+      - universities
+  /api/universities/register:
+    post:
+      consumes:
+      - application/json
+      description: Register a university
+      parameters:
+      - description: University registration data
+        in: body
+        name: university
+        required: true
+        schema:
+          $ref: '#/definitions/data.UniversityInput'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/data.UniversityOutput'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Register a university
       tags:
       - universities
 swagger: "2.0"
